--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+	<link rel="icon" type="image/svg+xml" href="/src/assets/portfolio_1.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Vite + React</title>
+	<title>Full Stack Portfolio</title>
 	<!-- Box icon cdn -->
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
